--- a/.github/workflows/dev_ci.yml
+++ b/.github/workflows/dev_ci.yml
@@ -2,7 +2,7 @@ name: TaxiFleet Backend Dev CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -23,7 +23,29 @@ jobs:
   deployment:
     needs: build
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: deploy
         run: |
-          ls -la
+          # Mount .env file from volume to container working directory
+          # The application runs from /root/ and looks for .env there
+          # Volume mapping: /opt/taxifleet_dev (host) -> /opt/taxifleet_dev (container)
+          # Mount .env: /opt/taxifleet_dev/.env (host) -> /root/.env (container)
+          res=`curl -sS -X POST \
+          --header "Authorization: Goli-Auth-Key ${{ secrets.DEPLOY_AUTH_KEY }}" \
+          --header "Content-Type: application/json" \
+          --data '{ 
+          "name": "taxifleet-backend-dev", 
+          "image": "ghcr.io/kowalski2019/taxifleet-backend:dev_latest", 
+          "network": "host", 
+          "v_map": true,
+          "volume_ex": "/opt/taxifleet_dev", 
+          "volume_in": "/opt/taxifleet_dev",
+          "opts": "--restart=always -v /opt/taxifleet_dev/.env:/root/.env:ro"
+          }' ${{ secrets.DEPLOY_URL }}`
+          
+          [ $? -ne 0 ] && exit 3
+          echo $res | jq -r '.description'
+          code=`echo $res | jq -r '.statusCode'`
+          echo "statusCode: $code"
+          [ $code -ne 200 ] && exit 3 || exit 0
